// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDbManager execs queries 1`] = `
Object {
  "error": undefined,
  "results": Array [
    Object {
      "columns": Array [
        "val",
      ],
      "values": Array [
        Array [
          1,
        ],
      ],
    },
  ],
}
`;

exports[`createDbManager loads the supplied database file url 1`] = `
Object {
  "error": undefined,
  "results": Array [
    Object {
      "columns": Array [
        "example_col",
      ],
      "values": Array [
        Array [
          "example_val",
        ],
      ],
    },
  ],
}
`;
